--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,11 @@
 .pr-3 {
 	padding-right: 15px;
 }
+.pb-5 {
+	padding-bottom: 50px;
+}
+@media (min-width: 1500px) {
+	.services {
+		padding: 20%;
+	}
+}
